# skaraa

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  billing.py  jobs.py  stems.py  tracks.py
backend/app/core/: __init__.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  credit.py  job.py  stem.py  track.py  user.py
backend/app/schemas/: job.py  stem.py  track.py  user.py
backend/app/services/: audio.py  credits.py  queue.py  storage.py  stripe.py
backend/app/utils/: fingerprint.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_tracks.py
frontend/: .env.local.example  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(marketing)/: page.tsx
frontend/src/config/: site.ts
frontend/src/hooks/: useAuth.ts  useJobStatus.ts  useUpload.ts
frontend/src/lib/: api.ts  auth.ts  supabase.ts
frontend/src/types/: index.ts
infra/deploy/: production.yml  staging.yml
infra/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
infra/scripts/: seed-db.sh  setup-dev.sh
scripts/: seed-db.sh  setup-dev.sh
shared/: __init__.py  constants.py  types.py
workers/: __init__.py  config.py  requirements.txt  stem_separator.py
(+14 files in other folders)
